--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "seed": "bun run src/database/seed.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.5.4",
+    "algoliasearch": "^4.22.1",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.4.1",
+    "@linear/sdk": "^9.0.0",
+    "@mendable/firecrawl-js": "^1.0.0",
+    "@microsoft/tiktokenizer": "^1.0.0",
+    "@qdrant/js-client-rest": "^1.7.0",
+    "@spotify/web-api-ts-sdk": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "ai": "^4.3.15",
     "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^9.4.1",
     "drizzle-orm": "^0.36.3",
+    "glob": "^10.3.10",
     "hono": "^4.6.10",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.73.0",
@@ -22,7 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.11",
+    "@types/glob": "^8.1.0",
     "@types/node": "^22.9.0",
     "@types/uuid": "^9.0.8",
     "bun-types": "^1.1.34",
