--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "seed": "bun run src/database/seed.ts"
   },
   "dependencies": {
-    "@libsql/client": "^0.5.4",
-    "algoliasearch": "^4.22.1",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.4.1",
+    "@libsql/client": "^0.5.4",
     "@linear/sdk": "^9.0.0",
     "@mendable/firecrawl-js": "^1.0.0",
     "@microsoft/tiktokenizer": "^1.0.0",
@@ -21,9 +20,11 @@
     "@spotify/web-api-ts-sdk": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "ai": "^4.3.15",
+    "algoliasearch": "^4.22.1",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.36.3",
     "glob": "^10.3.10",
+    "googleapis": "^148.0.0",
     "hono": "^4.6.10",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.73.0",
