--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,19 @@
     "skipLibCheck": true,
     "types": [
       "node",
-      "bun-types",
-      "src/**/*.ts", "src/**/*.d.ts"
+      "bun-types"
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-  }
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
