Enhance Linear integration with new setup script and API routes
- Added a `setup:linear` script to automate the configuration of Linear API keys and fetch team and user IDs.
- Introduced new routes for fetching teams and users from the Linear API, improving user setup experience.
- Updated `agi` routes to use UUIDs for conversation management, enhancing data consistency.
- Modified `package.json` to include the new setup script and updated documentation in `setup.md` for clarity on the setup process.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "bun run src/index.ts",
     "generate": "drizzle-kit generate",
     "migrate": "bun run src/database/migrate.ts",
-    "seed": "bun run src/database/seed.ts"
+    "seed": "bun run src/database/seed.ts",
+    "setup:linear": "bun run scripts/setup-linear.ts"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
