--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "generate": "drizzle-kit generate",
     "migrate": "bun run src/database/migrate.ts",
     "seed": "bun run src/database/seed.ts",
-    "setup:linear": "bun run scripts/setup-linear.ts"
+    "setup:linear": "bun run scripts/setup-linear.ts",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
@@ -19,16 +22,23 @@
     "@microsoft/tiktokenizer": "^1.0.0",
     "@qdrant/js-client-rest": "^1.7.0",
     "@spotify/web-api-ts-sdk": "^1.0.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jsonwebtoken": "^9.0.9",
     "ai": "^4.3.15",
     "algoliasearch": "^4.22.1",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.36.3",
+    "elevenlabs": "^1.59.0",
+    "fluent-ffmpeg": "^2.1.3",
     "glob": "^10.3.10",
     "googleapis": "^148.0.0",
     "hono": "^4.6.10",
     "jsonwebtoken": "^9.0.2",
+    "langfuse": "^3.37.2",
+    "marked": "^15.0.12",
+    "node-html-parser": "^7.0.1",
     "openai": "^4.73.0",
+    "resend": "^4.5.1",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
