--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:coverage": "bun test --coverage"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/openai": "^1.3.22",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.4.1",
