--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ai-sdk/openai": "^1.3.22",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@hono/node-server": "^1.14.1",
+    "@hono/swagger-ui": "^0.5.1",
+    "@hono/zod-openapi": "^0.19.6",
     "@hono/zod-validator": "^0.4.1",
     "@libsql/client": "^0.5.4",
     "@linear/sdk": "^9.0.0",
