--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/node": "^22.9.0",
+    "@types/node-cache": "^4.1.3",
     "@types/uuid": "^9.0.8",
     "bun-types": "^1.1.34",
     "drizzle-kit": "^0.28.1",
