Update environment configuration and enhance application documentation
- Updated `.env-example` to include default values for development, security settings, and additional environment variables.
- Revised `README.md` for improved clarity on application setup, including updated server port and environment variable descriptions.
- Enhanced `GETTING_STARTED.md` to reflect changes in default server settings and environment variable requirements.
- Refactored various service files to improve logging and error handling, ensuring better traceability and debugging.
- Updated TypeScript configuration for consistency and improved module resolution.

--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,26 @@
-NODE_ENV=
-PORT=
+## AgentTom environment template
+## Copy this file to ".env" and fill in sensitive values. Non-sensitive defaults are provided for local development.
+## Do NOT commit your ".env" file.
 
-## API key may be any value you want.
-APP_URL=
+# Basic app configuration (non-sensitive defaults for local dev)
+NODE_ENV=development
+LOG_LEVEL=INFO
+PORT=3000
+APP_URL=http://localhost:3000
+APP_TIMEZONE=Europe/Warsaw
+
+# Security & auth
+# Disable API key requirement in development; set to "false" in production
+DISABLE_API_KEY=true
+## API key may be any value you want. Leave blank to rely on DISABLE_API_KEY=true in dev
 API_KEY=
+# JWT secret for signing tokens (set a strong value in production)
+JWT_SECRET=
 
-## AI Providers — OpenAI & Anthropic are required
+# CORS (comma-separated origins). Use * only in development.
+CORS_ORIGIN=*
+
+## AI Providers — OPENAI_API_KEY is required; others are optional
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 XAI_API_KEY=
@@ -29,7 +44,7 @@ ALGOLIA_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_API_KEY=
-GOOGLE_REDIRECT_URI=
+GOOGLE_REDIRECT_URI=http://localhost
 
 GOOGLE_ACCESS_TOKEN=
 GOOGLE_REFRESH_TOKEN=
