Update environment configuration and enhance AI integration
- Modified `.env-example` to clarify required and optional AI provider keys, establishing Google Gemini as the default with OpenAI as a fallback.
- Updated `README.md` and `GETTING_STARTED.md` to reflect changes in environment variable requirements and setup instructions for AI integration.
- Enhanced OpenAPI documentation to include new endpoints for AGI chat functionality and improved error handling.
- Refactored various services to utilize the new AI provider configuration, ensuring consistent model usage across the application.
- Improved vector service to align with the dimensionality of the new default embedding model.

--- a/.env-example
+++ b/.env-example
@@ -20,7 +20,10 @@ JWT_SECRET=
 # CORS (comma-separated origins). Use * only in development.
 CORS_ORIGIN=*
 
-## AI Providers — OPENAI_API_KEY is required; others are optional
+## AI Providers — at least one is required. Gemini is default.
+## Recommended: set GOOGLE_API_KEY (AI Studio)
+GOOGLE_API_KEY=
+## Optional fallback providers
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 XAI_API_KEY=
@@ -43,7 +46,6 @@ ALGOLIA_API_KEY=
 ## You can get these from https://console.cloud.google.com
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_API_KEY=
 GOOGLE_REDIRECT_URI=http://localhost
 
 GOOGLE_ACCESS_TOKEN=
