--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^2.0.3",
     "@ai-sdk/openai": "^1.3.22",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@hono/node-server": "^1.14.1",
@@ -44,7 +45,7 @@
     "openai": "^4.73.0",
     "resend": "^4.5.1",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
