Update project structure and documentation
- Removed outdated files including `multi_agent_task_orchestration_master_agent_views_scaffold.md`, `setup.md`, `Tech_stack.md`, `TESTPLAN.md`, `TODO_FRONTEND.md`, and others to streamline the repository.
- Updated `.gitignore` to include `guidelines.md` and ensure proper tracking of relevant files.
- Enhanced `README.md` to provide a clearer overview of the project, including setup instructions and architecture details.
- Consolidated various documentation files to improve clarity and accessibility for users.
- Improved organization of the backlog and task management documentation to reflect current project needs.

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ todo/generated/
 
 # Keep backlog (todo/) tracked by default; generated views remain ignored
 README-agent-system.md
+guidelines.md
