--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,18 +16,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.540.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "openapi-fetch": "^0.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.48.2",
     "@tailwindcss/postcss": "^4",
     "@types/cookie": "^1.0.0",
     "@types/node": "^20",
@@ -37,7 +40,7 @@
     "eslint-config-next": "15.4.6",
     "openapi-typescript": "^7.8.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@playwright/test": "^1.48.2"
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5"
   }
 }
