Refactor environment configuration and streamline local-first setup
- Simplified `.env-example` by reducing environment variables to essential keys, clarifying required and optional configurations for local mode.
- Removed references to unnecessary external services, focusing on Google Gemini as the primary AI provider with OpenAI as an optional fallback.
- Updated `package.json` to include new scripts for local mode migration and validation, enhancing the development workflow.
- Enhanced documentation across `README.md`, `GETTING_STARTED.md`, and various architecture documents to reflect the new local-first approach and improved user experience.
- Cleaned up codebase by removing unused dependencies and references to deprecated services, ensuring a more maintainable and efficient project structure.

--- a/.env-example
+++ b/.env-example
@@ -1,92 +1,34 @@
-## AgentTom environment template
-## Copy this file to ".env" and fill in sensitive values. Non-sensitive defaults are provided for local development.
-## Do NOT commit your ".env" file.
+## AgentTom minimal environment template (local-first)
+## Copy to ".env" and fill in values. Do NOT commit your ".env" file.
 
-# Basic app configuration (non-sensitive defaults for local dev)
+# Basic app configuration
 NODE_ENV=development
 LOG_LEVEL=INFO
 PORT=3000
 APP_URL=http://localhost:3000
-APP_TIMEZONE=Europe/Warsaw
 
-# Security & auth
-# Disable API key requirement in development; set to "false" in production
-DISABLE_API_KEY=true
-## API key may be any value you want. Leave blank to rely on DISABLE_API_KEY=true in dev
-API_KEY=
-# JWT secret for signing tokens (set a strong value in production)
-JWT_SECRET=
+# Auth mode (local or multiuser)
+AUTH_MODE=local
 
-# CORS (comma-separated origins). Use * only in development.
-CORS_ORIGIN=*
-
-## AI Providers — at least one is required. Gemini is default.
-## Recommended: set GOOGLE_API_KEY (AI Studio)
+# AI Providers
+# Required (primary): Google Gemini API key
 GOOGLE_API_KEY=
-## Optional fallback providers
+# Optional (fallback): OpenAI API key
 OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-XAI_API_KEY=
 
-# Optional: Image generation provider
-# Default is OpenAI DALL·E 3. To enable Vertex Images (Imagen 3), set IMAGE_PROVIDER=vertex
-# and configure the GCP project/location and credentials (use ADC/GOOGLE_APPLICATION_CREDENTIALS)
-IMAGE_PROVIDER=
-VERTEX_PROJECT_ID=
-VERTEX_LOCATION=us-central1
-
-# Langfuse
-LANGFUSE_SECRET_KEY=
-LANGFUSE_PUBLIC_KEY=
-LANGFUSE_BASEURL=
-
-## Qdrant
-QDRANT_INDEX=
-QDRANT_URL=
-QDRANT_API_KEY=
-
-## Algolia
-ALGOLIA_INDEX=
-ALGOLIA_APP_ID=
-ALGOLIA_API_KEY=
-
-## You can get these from https://console.cloud.google.com
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://localhost
-
-GOOGLE_ACCESS_TOKEN=
-GOOGLE_REFRESH_TOKEN=
-GOOGLE_TOKEN_EXPIRY=
-
-## You can get these from https://console.cloud.google.com. In my case, I'm using another project for accessing calendar.
-CALENDAR_CLIENT_ID=
-CALENDAR_CLIENT_SECRET=
-
-## Firecrawl
+# Optional services (enable by setting the required keys)
+# Web scraping (Firecrawl)
 FIRECRAWL_API_KEY=
-## ElevenLabs
-ELEVENLABS_API_KEY=
-## Resend
+# Email (Resend)
 RESEND_API_KEY=
-## SMS API
-SMS_PHONE_NUMBER=
-FROM_EMAIL=
-USER_EMAIL=
-
-## Linear
+# TTS (ElevenLabs)
+ELEVENLABS_API_KEY=
+# Linear
 LINEAR_API_KEY=
-LINEAR_DEFAULT_TEAM_ID=
-LINEAR_DEFAULT_ASSIGNEE_ID=
-LINEAR_WEBHOOK_SECRET=
-
-## Spotify
+# Spotify
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
-## Elgato Lights
-ELGATO_LIGHTS_ON=
-ELGATO_LIGHTS_OFF=
-
-## CoinMarketCap
-COIN_MARKET_CAP_API_KEY=
+# Advanced (optional overrides)
+DEFAULT_LLM_PROVIDER=google
+DEFAULT_TEXT_MODEL=gemini-2.5-flash
