--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "migrate": "bun run src/database/migrate.ts",
     "seed": "bun run src/database/seed.ts",
     "setup:linear": "bun run scripts/setup-linear.ts",
+    "migrate:local-mode": "bun run scripts/migrate-to-local-mode.ts",
+    "validate:happy-path": "bun run scripts/validate-happy-path.ts",
+    "check:openapi-drift": "bun run scripts/check-openapi-drift.ts",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
