Enhance local-first architecture and streamline API key management
- Updated `.gitignore` to include performance and metrics files for better tracking.
- Refactored `package.json` to improve test scripts, adding specific commands for unit, integration, and performance tests.
- Modified local user configuration to enforce API key management through environment variables, removing web-based setup options.
- Improved `GETTING_STARTED.md` to clarify the requirement of a `.env` file for API keys and removed references to the setup wizard.
- Streamlined service integrations and updated documentation to reflect the new local-first approach, ensuring a more user-friendly experience.

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,12 @@ site/
 # Testing
 .nyc_output/
 
+# Performance and metrics files
+performance-*.json
+test-results.xml
+*.metrics.json
+*-metrics.json
+
 # Misc
 .cursor/
 .cursorrules
