--- a/package.json
+++ b/package.json
@@ -11,9 +11,22 @@
     "migrate:local-mode": "bun run scripts/migrate-to-local-mode.ts",
     "validate:happy-path": "bun run scripts/validate-happy-path.ts",
     "check:openapi-drift": "bun run scripts/check-openapi-drift.ts",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:coverage": "bun test --coverage",
+    "test": "bun run tests/test-runner.ts",
+    "test:watch": "bun run tests/test-runner.ts --watch",
+    "test:coverage": "bun run tests/test-runner.ts --coverage",
+    "test:ci": "bun run tests/test-runner.ts --coverage --verbose",
+    "test:unit": "bun run tests/test-runner.ts 'tests/unit/**/*.test.ts'",
+    "test:integration": "bun run tests/test-runner.ts 'tests/integration/**/*.test.ts'",
+    "test:smoke": "bun run tests/test-runner.ts 'tests/smoke/**/*.test.ts'",
+    "test:system": "bun run tests/test-runner.ts 'tests/system/**/*.test.ts'",
+    "test:legacy": "bun test",
+    "test:dashboard": "bun run tests/dashboard.ts",
+    "test:dashboard:summary": "bun run tests/dashboard.ts summary",
+    "test:dashboard:trends": "bun run tests/dashboard.ts trends",
+    "test:dashboard:coverage": "bun run tests/dashboard.ts coverage",
+    "test:performance": "bun run tests/performance/performance-runner.ts run",
+    "test:performance:history": "bun run tests/performance/performance-runner.ts history",
+    "test:performance:clear": "bun run tests/performance/performance-runner.ts clear",
     "build": "tsc --noEmit",
     "todo:split": "bun run scripts/splitMaster.ts",
     "todo:merge": "bun run scripts/mergeAgentUpdates.ts",
